k8s/providers/docker/infrastructure/controllers/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  annotations:
    goldilocks.fairwinds.com/vpa-update-mode: "off"
